--- a/index.html
+++ b/index.html
@@ -88,6 +88,8 @@
 				</aside>
 			</section>
 
+			<!-- https://cypressyounglife.com/ -->
+
 			<section>
 				<iframe class="" style="width: 1200px; height: 650px;" src="https://www.cypress.io/"></iframe>
 			</section>
@@ -105,9 +107,9 @@
 			</section>
 
 			<section>
-				<h2>Here are we?</h2>
+				<h2>Where are we?</h2>
 				<aside class="notes" data-markdown>
-					DRAW E2E domain
+					-  DRAW E2E domain
 				</aside>
 			</section>
 
@@ -115,10 +117,11 @@
 				<section>
 					<h2>In a nutshell, what is Cypress?</h2>
 					<ul>
+						<li class="fragment">The new kid on the block</li>
 						<li class="fragment">A high level test framework</li>
 						<li class="fragment">For writing automatic browser level tests</li>
 						<li class="fragment">For testing the entire stack</li>
-						<li class="fragment">A end to End test framework</li>
+						<li class="fragment">An end to End test framework</li>
 					</ul>
 				</section>
 				<section>
@@ -132,11 +135,19 @@
 			</section>
 
 			<section>
+				<h2>Selenium and Webdriver</h2>
+				<h3 class="fragment" >The old way</h3>
+				<img class="fragment" src="media/nightwatch.jpg">
+			</section>
+
+			<section>
 				<h3>Why is it lightyears ahead?</h3>
 				<ul>
-					<li class="fragment">Faster</li>
+					<li class="fragment">All in one</li>
+					<li class="fragment">Much Faster</li>
+					<li class="fragment">Running fully sync</li>
 					<li class="fragment">More stable</li>
-					<li class="fragment">Easier to whrite tests</li>
+					<li class="fragment">Easier to write tests</li>
 					<li class="fragment">Easier to debug</li>
 					<li class="fragment">VIDEO RECODING!</li>
 					<li class="fragment">Cheap!</li>
@@ -146,7 +157,6 @@
 					<li class="fragment">No selenium!</li>
 					<li class="fragment">Intercept and mock/stub requests!</li>
 					<li class="fragment">Native browser access!</li>
-					<li class="fragment">Fully sync!</li>
 				</ul>
 			</section>
 
@@ -164,11 +174,10 @@
 
 			<section>
 				<h2>Enought theory!</h2>
-				<p class="fragment">Let's write some tests!</p>
 			</section>
 
 			<section>
-				Cypress has paralalisation!
+				<h2>Cypress just got paralalisation!</h2>
 			</section>
 
 			<section>
@@ -194,9 +203,10 @@
 			</section>
 
 			<section>
-				<h2>Cypress is yong</h2>
+				<h2>Cypress is young</h2>
 				<aside class="notes" data-markdown>
 					- Less features and comunity support for now, but will improve
+					- WAT https://cypressyounglife.com/
 				</aside>
 			</section>
 
@@ -214,10 +224,6 @@
 			</section>
 			<section data-background="media/stock/questions.jpeg">
 				<h1 class="fragment">Questions?</h1>
-			</section>
-			<section>
-				<h1>bit.ly/webrtc2018demo</h1>
-				<h3>webrtc 2018 demo</h3>
 			</section>
 			<section>
 				This page is unintentionally left blank
