--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
 						<li class="fragment">A high level test framework</li>
 						<li class="fragment">For writing automatic browser level tests</li>
 						<li class="fragment">For testing the entire stack</li>
-						<li class="fragment">An end to End test framework</li>
+						<li class="fragment">An End to End test framework</li>
 					</ul>
 				</section>
 				<section>
@@ -200,6 +200,10 @@
 
 			<section>
 				<h2>You can test around the drawbacks</h2>
+			</section>
+			
+			<section>
+				<h2>Great choice for integration testing as well</h2>
 			</section>
 
 			<section>
