--- a/index.html
+++ b/index.html
@@ -73,6 +73,7 @@
 				<h4>
 					Senior knowledge engineer at Computas
 				</h4>
+				<h5>Spellchecked by ...</h5>
 			</section>
 			<section data-background="media/stock/cypress-tree.jpg">
 				<h2 class="fragment black-stroke">Cypress Tree</h2>
@@ -99,7 +100,7 @@
 				<!--  TODO remove slide? -->
 				<ul>
 					<li class="fragment black-stroke-thin">Theory</li>
-					<li class="fragment black-stroke-thin">Pracsis</li>
+					<li class="fragment black-stroke-thin">Practise</li>
 				</ul>
 				<aside class="notes" data-markdown>
 					- Outline
@@ -149,10 +150,10 @@
 					<li class="fragment">More stable</li>
 					<li class="fragment">Easier to write tests</li>
 					<li class="fragment">Easier to debug</li>
-					<li class="fragment">VIDEO RECODING!</li>
+					<li class="fragment">Video recoding!</li>
 					<li class="fragment">Cheap!</li>
 					<li class="fragment">Dashboard!</li>
-					<li class="fragment">Automaticly waits!</li>
+					<li class="fragment">Automatically waits!</li>
 					<li class="fragment">Time travel!</li>
 					<li class="fragment">No selenium!</li>
 					<li class="fragment">Intercept and mock/stub requests!</li>
@@ -161,7 +162,7 @@
 			</section>
 
 			<section>
-				<h3>Befefits of Nightwatch over Cypress</h3>
+				<h3>Benefits of Nightwatch over Cypress</h3>
 				<ul>
 					<li class="fragment">More browsers</li>
 					<li class="fragment">More pain</li>
@@ -173,24 +174,24 @@
 			</section>
 
 			<section>
-				<h2>Enought theory!</h2>
+				<h2>Enough theory!</h2>
 			</section>
 
 			<section>
-				<h2>Cypress just got paralalisation!</h2>
+				<h2>Cypress just got parallelisation!</h2>
 			</section>
 
 			<section>
 				<h3>Permanent Drawbacks</h3>
 				<ul>
-					<li class="fragment">No multible tabs/windows</li>
+					<li class="fragment">No multiple tabs/windows</li>
 					<li class="fragment">Only same origin</li>
 					<li class="fragment">Only in JS</li>
 				</ul>
 			</section>
 
 			<section>
-				<h3>Temporaily Drawbacks</h3>
+				<h3>Temporarily Drawbacks</h3>
 				<ul>
 					<li class="fragment">Browser support</li>
 					<li class="fragment">Limited iframe support</li>
@@ -209,7 +210,7 @@
 			<section>
 				<h2>Cypress is young</h2>
 				<aside class="notes" data-markdown>
-					- Less features and comunity support for now, but will improve
+					- Less features and community support for now, but will improve
 					- WAT https://cypressyounglife.com/
 				</aside>
 			</section>
