Spelled by Erik

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 				<h4>
 					Senior knowledge engineer at Computas
 				</h4>
-				<h5>Spellchecked by ...</h5>
+				<h5>Spellchecked by an Erik</h5>
 			</section>
 			<section data-background="media/stock/cypress-tree.jpg">
 				<h2 class="fragment black-stroke">Cypress Tree</h2>
@@ -120,7 +120,7 @@
 					<ul>
 						<li class="fragment">The new kid on the block</li>
 						<li class="fragment">A high level test framework</li>
-						<li class="fragment">For writing automatic browser level tests</li>
+						<li class="fragment">For writing automated browser level tests</li>
 						<li class="fragment">For testing the entire stack</li>
 						<li class="fragment">An End to End test framework</li>
 					</ul>
@@ -146,16 +146,16 @@
 				<ul>
 					<li class="fragment">All in one</li>
 					<li class="fragment">Much Faster</li>
-					<li class="fragment">Running fully sync</li>
+					<li class="fragment">Running fully in sync with the browser</li>
 					<li class="fragment">More stable</li>
 					<li class="fragment">Easier to write tests</li>
 					<li class="fragment">Easier to debug</li>
-					<li class="fragment">Video recoding!</li>
+					<li class="fragment">Video recording!</li>
 					<li class="fragment">Cheap!</li>
 					<li class="fragment">Dashboard!</li>
 					<li class="fragment">Automatically waits!</li>
 					<li class="fragment">Time travel!</li>
-					<li class="fragment">No selenium!</li>
+					<li class="fragment">No Selenium!</li>
 					<li class="fragment">Intercept and mock/stub requests!</li>
 					<li class="fragment">Native browser access!</li>
 				</ul>
@@ -191,7 +191,7 @@
 			</section>
 
 			<section>
-				<h3>Temporarily Drawbacks</h3>
+				<h3>Temporary Drawbacks</h3>
 				<ul>
 					<li class="fragment">Browser support</li>
 					<li class="fragment">Limited iframe support</li>
@@ -210,17 +210,17 @@
 			<section>
 				<h2>Cypress is young</h2>
 				<aside class="notes" data-markdown>
-					- Less features and community support for now, but will improve
+					- Fewer features and less community support for now, but this will improve
 					- WAT https://cypressyounglife.com/
 				</aside>
 			</section>
 
 			<section>
-				<h2>Consider using Typescript</h2>
+				<h2>Consider using TypeScript</h2>
 			</section>
 
 			<section>
-				<h3>Stop your unhealthy dependency on selenium and webdriver</h3>
+				<h3>Stop your unhealthy dependency on Selenium and Webdriver</h3>
 				<h2 class="fragment">Join the Cypress revolution!</h2>
 			</section>
 
